Changes to code and app

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
+
 <body>
   <div class="container">
 
@@ -17,11 +18,13 @@
       <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
     </div>
 
+
+
     <!-- Craigslist Listings -->
     <div class="row" id="craiglist-listings">
       <div class="col-md-12">
         <h2 class="heading">Lastest Mars News</h2>
-        <!--<small>{{short title}}</small>-->
+        <small>{{"news_title"}}</small>
       </div>
     </div>
 
